# BUILD.bazel
# load("@rules_cc//cc:defs.bzl", "cc_toolchain_suite")

# Export the dependency rules
export_files("deps.bzl")

# cc_toolchain_suite(
#     name = "toolchain",
#     toolchains = {
#         "darwin": "@arm_none_eabi//toolchains/arm-none-eabi/darwin",
#         "k8": "@arm_none_eabi//toolchains/arm-none-eabi/linux",
#         "x64_windows": "@arm_none_eabi//toolchains/arm-none-eabi/windows",
#     },
# )
