# BUILD

package(default_visibility = ["//visibility:public"])

config_setting(
    name = "darwin",
    values = {"cpu": "darwin"},
)

config_setting(
    name = "linux",
    values = {"cpu": "k8"},
)

config_setting(
    name = "windows",
    values = {"cpu": "x64_windows"},
)

filegroup(
    name = "gcc",
    srcs = select({
        "darwin": ["@arm-none-eabi-darwin//:bin/arm-none-eabi-gcc"],
        "linux": ["@arm-none-eabi-linux//:bin/arm-none-eabi-gcc"],
        "windows": ["@arm-none-eabi-windows//:bin/arm-none-eabi-gcc.exe"],
    }),
)

filegroup(
    name = "ar",
    srcs = select({
        "darwin": ["@arm-none-eabi-darwin//:bin/arm-none-eabi-ar"],
        "linux": ["@arm-none-eabi-linux//:bin/arm-none-eabi-ar"],
        "windows": ["@arm-none-eabi-windows//:bin/arm-none-eabi-ar.exe"],
    }),
)

filegroup(
    name = "ld",
    srcs = select({
        "darwin": ["@arm-none-eabi-darwin//:bin/arm-none-eabi-ld"],
        "linux": ["@arm-none-eabi-linux//:bin/arm-none-eabi-ld"],
        "windows": ["@arm-none-eabi-windows//:bin/arm-none-eabi-ld.exe"],
    }),
)

filegroup(
    name = "nm",
    srcs = select({
        "darwin": ["@arm-none-eabi-darwin//:bin/arm-none-eabi-nm"],
        "linux": ["@arm-none-eabi-linux//:bin/arm-none-eabi-nm"],
        "windows": ["@arm-none-eabi-windows//:bin/arm-none-eabi-nm.exe"],
    }),
)

filegroup(
    name = "objcopy",
    srcs = select({
        "darwin": ["@arm-none-eabi-darwin//:bin/arm-none-eabi-objcopy"],
        "linux": ["@arm-none-eabi-linux//:bin/arm-none-eabi-objcopy"],
        "windows": ["@arm-none-eabi-windows//:bin/arm-none-eabi-objcopy.exe"],
    }),
)

filegroup(
    name = "objdump",
    srcs = select({
        "darwin": ["@arm-none-eabi-darwin//:bin/arm-none-eabi-objdump"],
        "linux": ["@arm-none-eabi-linux//:bin/arm-none-eabi-objdump"],
        "windows": ["@arm-none-eabi-windows//:bin/arm-none-eabi-objdump.exe"],
    }),
)

filegroup(
    name = "strip",
    srcs = select({
        "darwin": ["@arm-none-eabi-darwin//:bin/arm-none-eabi-strip"],
        "linux": ["@arm-none-eabi-linux//:bin/arm-none-eabi-strip"],
        "windows": ["@arm-none-eabi-windows//:bin/arm-none-eabi-strip.exe"],
    }),
)

filegroup(
    name = "as",
    srcs = select({
        "darwin": ["@arm-none-eabi-darwin//:bin/arm-none-eabi-as"],
        "linux": ["@arm-none-eabi-linux//:bin/arm-none-eabi-as"],
        "windows": ["@arm-none-eabi-windows//:bin/arm-none-eabi-as.exe"],
    }),
)
