module(
    name = "arm_gnu_toolchain",
    version = "1.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "platforms", version = "0.0.8")

arm_gnu_gcc = use_extension("@arm_gnu_toolchain//:extensions.bzl", "arm_gnu")
arm_gnu_gcc.toolchain(version = "9.2.1")
use_repo(
    arm_gnu_gcc,
    "arm_none_eabi",
    "arm_none_eabi_darwin_x86_64",
    "arm_none_eabi_linux_aarch64",
    "arm_none_eabi_linux_x86_64",
    "arm_none_eabi_windows_x86_64",
)

# DEV ONLY (not needed for release)
bazel_dep(name = "aspect_bazel_lib", version = "2.0.0", dev_dependency = True)
bazel_dep(name = "bazel_skylib", version = "1.5.0", dev_dependency = True)

register_toolchains(
    "@arm_none_eabi//toolchain:all",
    dev_dependency = True,
)

register_toolchains(
    "@arm_gnu_toolchain//examples/custom/toolchain:all",
    dev_dependency = True,
)
