"""ARM cross compilation toolchains for bazel"""

module(
    name = "smoke",
    version = "0.0.1",
)

bazel_dep(name = "aspect_bazel_lib", version = "2.0.0")
bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "arm_gnu_toolchain")
local_path_override(
    module_name = "arm_gnu_toolchain",
    path = "../..",
)

arm_toolchain = use_extension("@arm_gnu_toolchain//:extensions.bzl", "arm_toolchain")
arm_toolchain.arm_none_eabi(version = "13.2.1")
use_repo(
    arm_toolchain,
    "arm_none_eabi",
    "arm_none_eabi_darwin_arm64",
    "arm_none_eabi_darwin_x86_64",
    "arm_none_eabi_linux_aarch64",
    "arm_none_eabi_linux_x86_64",
    "arm_none_eabi_windows_x86_64",
)
arm_toolchain.arm_none_linux_gnueabihf(version = "13.2.1")
use_repo(
    arm_toolchain,
    "arm_none_linux_gnueabihf",
    "arm_none_linux_gnueabihf_linux_aarch64",
    "arm_none_linux_gnueabihf_linux_x86_64",
    "arm_none_linux_gnueabihf_windows_x86_64",
)

register_toolchains(
    "@arm_none_eabi//toolchain:all",
    "@arm_none_linux_gnueabihf//toolchain:all",
    "//custom/toolchain:all",
)
