"""GCC version selection"""

module(name = "gcc_version", version = "0.0.1")

bazel_dep(name = "aspect_bazel_lib", version = "2.0.0")
bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "toolchains_arm_gnu")

local_path_override(
    module_name = "toolchains_arm_gnu",
    path = "../..",
)

arm_toolchain = use_extension("@toolchains_arm_gnu//:extensions.bzl", "arm_toolchain")
arm_toolchain.arm_none_eabi(version = "9.2.1")
use_repo(arm_toolchain, "arm_none_eabi")

register_toolchains("@arm_none_eabi//toolchain:all")
