"""ARM cross compilation toolchains for bazel"""

module(
    name = "raspberry_pi",
    version = "0.0.1",
)

bazel_dep(name = "platforms", version = "0.0.8")
bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "aspect_bazel_lib", version = "2.0.0")
bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "toolchains_arm_gnu")
local_path_override(
    module_name = "toolchains_arm_gnu",
    path = "../..",
)

arm_toolchain = use_extension("@toolchains_arm_gnu//:extensions.bzl", "arm_toolchain")
arm_toolchain.aarch64_none_elf()
use_repo(arm_toolchain, "aarch64_none_elf")

register_toolchains("//toolchain:all")
