load("@rules_cc//cc:defs.bzl", "cc_toolchain")
load("//toolchains/arm-none-eabi/darwin:config.bzl", "cc_arm_none_eabi_darwin_config")

package(default_visibility = ["//visibility:public"])

cc_arm_none_eabi_darwin_config(
    name = "darwin_config",
)

cc_toolchain(
    name = "darwin",
    all_files = "//toolchains/arm-none-eabi/darwin:all_files",
    ar_files = "//toolchains/arm-none-eabi/darwin:ar_files",
    compiler_files = "//toolchains/arm-none-eabi/darwin:compiler_files",
    dwp_files = ":empty",
    linker_files = "//toolchains/arm-none-eabi/darwin:linker_files",
    objcopy_files = "//toolchains/arm-none-eabi/darwin:objcopy_files",
    strip_files = "//toolchains/arm-none-eabi/darwin:strip_files",
    supports_param_files = 0,
    toolchain_config = ":darwin_config",
    toolchain_identifier = "arm-none-eabi-darwin",
)